[package]
name = "rzip"
version = "0.9.1"
authors = ["Irisawa Masaru <irisawa.masaru@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Simple archiver"
repository = "https://github.com/mass10/rzip/"
documentation = "https://docs.rs/crate/rzip/"
categories = ["command-line-utilities"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "^0.5.12"
time = "^0.1.44"
chrono = "^0.4.19"
regex = "^1.4.5"
toml = "^0.5.8"
serde = "^1.0"
serde_derive = "^1.0"
